--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <script src="https://unpkg.com/vue@3.2.16/dist/vue.global.js"></script>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <counter></counter>
+  </div>
 
   <script type="module" src="main.js"></script>
 </body>
