--- a/index11.html
+++ b/index11.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
   </body>
   
-  <script type="'module">
+  <script type="module">
 
     import Counter from "./counter.js;
 
